--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -59,7 +59,7 @@
                     </td>
                   <% end %>
                   <td>
-                    <%= link_to "Show", class: "btn btn-xs btn-primary"%>
+                    <%= link_to "Show", order_path(order.id), class: "btn btn-xs btn-primary"%>
                   </td>
                   <td>
                     <%= link_to "Edit",class: 'btn btn-xs btn-primary'%>
