--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <li><%= link_to "Categories", categories_path %></li>
           <li><%= link_to "Addresses", addresses_path %></li>
           <li><%= link_to "Users", users_path %></li>
-          <li class="disabled"><a href="">Orders</a></li>
+          <li><%= link_to "Orders", orders_path %></li>
           <li><%= link_to "Analytics Dashboard", root_path %></li>
         </ul>
       </div>
