--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,4 @@
-<h1>New Order for <% "#{@user.first_name} #{@user.last_name}" %></h1>
-<%= render 'orders/order_form' %>
+<h1>New Order for <%= "#{@user.user_full_name}" %></h1>
+
+<%= render 'orders/basic_info' %>
+<%= render 'orders/form' %>
