--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-offset-3 col-md-6 user-buttons">
-       <%= link_to "Create Order", unplaced_path, class: 'btn btn-lg btn-block btn-info' %>
+       <%= link_to "Create Order", new_order_path(user_id: @user.id), class: 'btn btn-lg btn-block btn-info' %>
         </div>
       </div>
       <div class="row">
