--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <h1 class="text-center">
-  <%= @product.id %>
+  <%= @product.name %>
 </h1>
 
 <h3>Product id:  <span class="text-info"><%= @product.id %></span></h3>
