--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,10 +1,10 @@
 
 <%= form_for @order do |f| %>
   <%= f.label :shipping_id %>
-  <%= f.collection_select( :shipping_id, @user.addresses, :id, :street_address) %>
+  <%= f.collection_select( :shipping_id, @user.addresses, :id, :full_address) %>
   <br>
   <%= f.label :billing_id %>
-  <%= f.collection_select( :billing_id, @user.addresses, :id, :street_address) %>
+  <%= f.collection_select( :billing_id, @user.addresses, :id, :full_address) %>
   <br>
   <%= f.hidden_field :user_id, value: @user.id %>
   <%= f.submit "Create Order in Shopping Cart"%>
