--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,8 +29,8 @@
 <%= link_to "View Saved Addresses",addresses_path(:id => @user.id), class: 'btn btn-xs btn-primary' %><br>
 
 
-<%= link_to "View Placed Orders", orders_path(user_id: @user.id), class: 'btn btn-xs btn-primary' %> <br>
-<%= link_to "View Unplaced Order(cart)", "#", class: 'btn btn-xs btn-primary' %>
+<%= link_to "View Orders", orders_path(user_id: @user.id), class: 'btn btn-xs btn-primary' %> <br>
+<%= link_to "View cart", order_path(@user.cart.first.id, user_id: @user.id), class: 'btn btn-xs btn-primary' %>
 
 <br>
 
